# 3048

./: .gitignore  .pre-commit-config.yaml  build.sh  docker-compose.yml
backend/: Dockerfile
frontend/: .babelrc  .eslintrc  package.json  webpack.config.js
frontend/src/: AI.js  AI.worker.js  App.js  App.jsx  App.module.css  Axis.js  Board.js  Board.module.css  Board.scss  BoardUtils.js  BoardUtils.test.js  GameControls.js  GameInfo.js  GameInfo.module.css  GameInfo.scss  Line.js  Row.js  SearchNode.js  Simulator.js  Tile.js  Tile.module.css  Weights.js  Worker.js  Worker2.js  XYAxis.js  bootstrap.js  index.js  utils.js
frontend/testing/: simulations.txt
js/: .babelrc  .eslintrc.json  README.md  jest.config.js  package.json  webpack.config.js
js/src/: AI.js  AI.worker.js  App.js  App.scss  Board.js  BoardUtils.js  BoardUtils.test.js  ConfigManagement.js  ConfigManagement.scss  GameControls.js  GameControls.scss  GameInfo.js  Row.js  Tile.scss  bootstrap.js  utils.js
rust/: Cargo.toml
rust/src/: ai.rs  lib.rs  main.rs  main2.rs
rust/src/MCTSearch/: mod.rs
rust/src/board_utils/: coordinate.rs  mod.rs  tests.rs  tile.rs
rust/src/mct_search/: mod.rs  tests.rs
rust/tests/: web.rs
